#! Cargo.toml

[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified, 
# cargo will defaultr to `package.name`, which is what we want.
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web= "4"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}

[dev-dependencies]
reqwest = "0.12"